debugging after discovering some issues post multiple damage/hazard scenario checks

--- a/workflow/notebooks/process_ev.ipynb
+++ b/workflow/notebooks/process_ev.ipynb
@@ -2,27 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "07ae3738-6ce1-4625-9777-cb42c218896b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-28T16:38:10.882711Z",
-     "iopub.status.busy": "2023-12-28T16:38:10.882140Z",
-     "iopub.status.idle": "2023-12-28T16:38:11.483058Z",
-     "shell.execute_reply": "2023-12-28T16:38:11.481512Z",
-     "shell.execute_reply.started": "2023-12-28T16:38:10.882661Z"
+     "iopub.execute_input": "2024-02-29T20:17:35.698700Z",
+     "iopub.status.busy": "2024-02-29T20:17:35.698364Z",
+     "iopub.status.idle": "2024-02-29T20:17:35.862202Z",
+     "shell.execute_reply": "2024-02-29T20:17:35.861521Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:35.698671Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -30,15 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "8cf7aaad-086f-40a9-92e4-374d1efb7495",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-28T16:38:11.485751Z",
-     "iopub.status.busy": "2023-12-28T16:38:11.485284Z",
-     "iopub.status.idle": "2023-12-28T16:38:11.522978Z",
-     "shell.execute_reply": "2023-12-28T16:38:11.521224Z",
-     "shell.execute_reply.started": "2023-12-28T16:38:11.485703Z"
+     "iopub.execute_input": "2024-02-29T20:17:36.259180Z",
+     "iopub.status.busy": "2024-02-29T20:17:36.258721Z",
+     "iopub.status.idle": "2024-02-29T20:17:38.021905Z",
+     "shell.execute_reply": "2024-02-29T20:17:38.021043Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:36.259146Z"
     }
    },
    "outputs": [],
@@ -63,15 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "1ae98b55-a0e0-4e75-b3f3-b9dcc294234c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-28T16:38:11.525132Z",
-     "iopub.status.busy": "2023-12-28T16:38:11.524651Z",
-     "iopub.status.idle": "2023-12-28T16:38:11.563715Z",
-     "shell.execute_reply": "2023-12-28T16:38:11.562027Z",
-     "shell.execute_reply.started": "2023-12-28T16:38:11.525083Z"
+     "iopub.execute_input": "2024-02-29T20:17:38.025940Z",
+     "iopub.status.busy": "2024-02-29T20:17:38.023342Z",
+     "iopub.status.idle": "2024-02-29T20:17:38.043984Z",
+     "shell.execute_reply": "2024-02-29T20:17:38.043394Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:38.025905Z"
     }
    },
    "outputs": [],
@@ -101,15 +92,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "462240d3-88c1-461a-bcbd-22f0585387f9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-28T16:38:13.451752Z",
-     "iopub.status.busy": "2023-12-28T16:38:13.451242Z",
-     "iopub.status.idle": "2023-12-28T16:38:13.484081Z",
-     "shell.execute_reply": "2023-12-28T16:38:13.482269Z",
-     "shell.execute_reply.started": "2023-12-28T16:38:13.451705Z"
+     "iopub.execute_input": "2024-02-29T20:17:39.252016Z",
+     "iopub.status.busy": "2024-02-29T20:17:39.251614Z",
+     "iopub.status.idle": "2024-02-29T20:17:39.271661Z",
+     "shell.execute_reply": "2024-02-29T20:17:39.271080Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:39.251984Z"
     }
    },
    "outputs": [],
@@ -121,15 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "4108629a-beb2-44ba-94a2-634f69a44dad",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-28T16:38:14.361565Z",
-     "iopub.status.busy": "2023-12-28T16:38:14.361060Z",
-     "iopub.status.idle": "2023-12-28T16:38:14.399902Z",
-     "shell.execute_reply": "2023-12-28T16:38:14.398364Z",
-     "shell.execute_reply.started": "2023-12-28T16:38:14.361519Z"
+     "iopub.execute_input": "2024-02-29T20:17:39.428978Z",
+     "iopub.status.busy": "2024-02-29T20:17:39.428663Z",
+     "iopub.status.idle": "2024-02-29T20:17:39.465988Z",
+     "shell.execute_reply": "2024-02-29T20:17:39.465311Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:39.428949Z"
     }
    },
    "outputs": [],
@@ -142,15 +133,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "b08a969c-fd99-4dae-ae15-041f5be159f4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-28T16:38:15.356824Z",
-     "iopub.status.busy": "2023-12-28T16:38:15.356323Z",
-     "iopub.status.idle": "2023-12-28T16:38:15.895055Z",
-     "shell.execute_reply": "2023-12-28T16:38:15.894002Z",
-     "shell.execute_reply.started": "2023-12-28T16:38:15.356779Z"
+     "iopub.execute_input": "2024-02-29T20:17:39.732449Z",
+     "iopub.status.busy": "2024-02-29T20:17:39.732053Z",
+     "iopub.status.idle": "2024-02-29T20:17:39.927456Z",
+     "shell.execute_reply": "2024-02-29T20:17:39.926841Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:39.732422Z"
     }
    },
    "outputs": [],
@@ -189,15 +180,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "b30dc5b6-24f2-4552-a274-465aab776350",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-28T16:38:17.582099Z",
-     "iopub.status.busy": "2023-12-28T16:38:17.581581Z",
-     "iopub.status.idle": "2023-12-28T16:38:17.616017Z",
-     "shell.execute_reply": "2023-12-28T16:38:17.614223Z",
-     "shell.execute_reply.started": "2023-12-28T16:38:17.582051Z"
+     "iopub.execute_input": "2024-02-29T20:17:39.940503Z",
+     "iopub.status.busy": "2024-02-29T20:17:39.940272Z",
+     "iopub.status.idle": "2024-02-29T20:17:39.950957Z",
+     "shell.execute_reply": "2024-02-29T20:17:39.950568Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:39.940487Z"
     }
    },
    "outputs": [],
@@ -212,15 +203,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "80d179e9-26c9-4f13-88c8-c54d7c1188c0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-28T16:38:17.842069Z",
-     "iopub.status.busy": "2023-12-28T16:38:17.841571Z",
-     "iopub.status.idle": "2023-12-28T16:38:19.032602Z",
-     "shell.execute_reply": "2023-12-28T16:38:19.030750Z",
-     "shell.execute_reply.started": "2023-12-28T16:38:17.842024Z"
+     "iopub.execute_input": "2024-02-29T20:17:40.383722Z",
+     "iopub.status.busy": "2024-02-29T20:17:40.383432Z",
+     "iopub.status.idle": "2024-02-29T20:17:48.405206Z",
+     "shell.execute_reply": "2024-02-29T20:17:48.404323Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:40.383695Z"
     }
    },
    "outputs": [],
@@ -236,15 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "b268cd77-1947-4d88-8e34-b6010345b208",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-28T16:38:19.035727Z",
-     "iopub.status.busy": "2023-12-28T16:38:19.035267Z",
-     "iopub.status.idle": "2023-12-28T16:38:19.371994Z",
-     "shell.execute_reply": "2023-12-28T16:38:19.370775Z",
-     "shell.execute_reply.started": "2023-12-28T16:38:19.035685Z"
+     "iopub.execute_input": "2024-02-29T20:17:48.407404Z",
+     "iopub.status.busy": "2024-02-29T20:17:48.406652Z",
+     "iopub.status.idle": "2024-02-29T20:17:48.934411Z",
+     "shell.execute_reply": "2024-02-29T20:17:48.933692Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:48.407369Z"
     }
    },
    "outputs": [],
@@ -268,15 +259,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "3dacc2ed-62c5-481c-8b0c-9c2b173d8604",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-28T16:38:19.991568Z",
-     "iopub.status.busy": "2023-12-28T16:38:19.991379Z",
-     "iopub.status.idle": "2023-12-28T16:38:20.150742Z",
-     "shell.execute_reply": "2023-12-28T16:38:20.149420Z",
-     "shell.execute_reply.started": "2023-12-28T16:38:19.991552Z"
+     "iopub.execute_input": "2024-02-29T20:17:48.935756Z",
+     "iopub.status.busy": "2024-02-29T20:17:48.935370Z",
+     "iopub.status.idle": "2024-02-29T20:17:49.190844Z",
+     "shell.execute_reply": "2024-02-29T20:17:49.190177Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:48.935727Z"
     }
    },
    "outputs": [],
@@ -304,15 +295,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "dca1d9e1-e9f1-4c5b-b55a-6c80e1f18b67",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-28T16:38:20.716837Z",
-     "iopub.status.busy": "2023-12-28T16:38:20.716632Z",
-     "iopub.status.idle": "2023-12-28T16:38:20.833461Z",
-     "shell.execute_reply": "2023-12-28T16:38:20.832315Z",
-     "shell.execute_reply.started": "2023-12-28T16:38:20.716820Z"
+     "iopub.execute_input": "2024-02-29T20:17:49.193152Z",
+     "iopub.status.busy": "2024-02-29T20:17:49.192349Z",
+     "iopub.status.idle": "2024-02-29T20:17:49.318016Z",
+     "shell.execute_reply": "2024-02-29T20:17:49.317215Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:49.193122Z"
     }
    },
    "outputs": [],
@@ -332,15 +323,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "f5fffede-d15f-4a04-8bc0-7865247078a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-28T16:38:26.096893Z",
-     "iopub.status.busy": "2023-12-28T16:38:26.096637Z",
-     "iopub.status.idle": "2023-12-28T16:38:26.865903Z",
-     "shell.execute_reply": "2023-12-28T16:38:26.864835Z",
-     "shell.execute_reply.started": "2023-12-28T16:38:26.096873Z"
+     "iopub.execute_input": "2024-02-29T20:17:49.319628Z",
+     "iopub.status.busy": "2024-02-29T20:17:49.318807Z",
+     "iopub.status.idle": "2024-02-29T20:17:50.057141Z",
+     "shell.execute_reply": "2024-02-29T20:17:50.056289Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:49.319594Z"
     }
    },
    "outputs": [],
@@ -370,15 +361,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "26a4fbb6-23b2-49b0-a485-6bc268bc92c0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-06T19:48:48.755151Z",
-     "iopub.status.busy": "2023-11-06T19:48:48.754844Z",
-     "iopub.status.idle": "2023-11-06T19:48:48.787282Z",
-     "shell.execute_reply": "2023-11-06T19:48:48.785486Z",
-     "shell.execute_reply.started": "2023-11-06T19:48:48.755123Z"
+     "iopub.execute_input": "2024-02-29T20:17:50.058716Z",
+     "iopub.status.busy": "2024-02-29T20:17:50.058368Z",
+     "iopub.status.idle": "2024-02-29T20:17:50.080072Z",
+     "shell.execute_reply": "2024-02-29T20:17:50.079376Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:50.058687Z"
     }
    },
    "outputs": [],
@@ -392,15 +383,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 14,
    "id": "f2558d82-b45e-4249-8bd8-c416d0d5ca37",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T21:38:08.712851Z",
-     "iopub.status.busy": "2023-12-05T21:38:08.712130Z",
-     "iopub.status.idle": "2023-12-05T21:38:08.775185Z",
-     "shell.execute_reply": "2023-12-05T21:38:08.774082Z",
-     "shell.execute_reply.started": "2023-12-05T21:38:08.712819Z"
+     "iopub.execute_input": "2024-02-29T20:17:50.081198Z",
+     "iopub.status.busy": "2024-02-29T20:17:50.080955Z",
+     "iopub.status.idle": "2024-02-29T20:17:50.219395Z",
+     "shell.execute_reply": "2024-02-29T20:17:50.218668Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:50.081175Z"
     }
    },
    "outputs": [],
@@ -421,15 +412,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 15,
    "id": "01a06109-cc56-4abf-8973-dfd3ebd531fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T21:38:09.080956Z",
-     "iopub.status.busy": "2023-12-05T21:38:09.080397Z",
-     "iopub.status.idle": "2023-12-05T21:38:09.128136Z",
-     "shell.execute_reply": "2023-12-05T21:38:09.126913Z",
-     "shell.execute_reply.started": "2023-12-05T21:38:09.080909Z"
+     "iopub.execute_input": "2024-02-29T20:17:50.220497Z",
+     "iopub.status.busy": "2024-02-29T20:17:50.220165Z",
+     "iopub.status.idle": "2024-02-29T20:17:50.247638Z",
+     "shell.execute_reply": "2024-02-29T20:17:50.247008Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:50.220470Z"
     }
    },
    "outputs": [],
@@ -494,15 +485,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 16,
    "id": "5f934250-6c91-47fd-9497-13702fd8f776",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T21:38:09.280248Z",
-     "iopub.status.busy": "2023-12-05T21:38:09.279433Z",
-     "iopub.status.idle": "2023-12-05T21:38:09.346135Z",
-     "shell.execute_reply": "2023-12-05T21:38:09.345040Z",
-     "shell.execute_reply.started": "2023-12-05T21:38:09.280202Z"
+     "iopub.execute_input": "2024-02-29T20:17:50.249101Z",
+     "iopub.status.busy": "2024-02-29T20:17:50.248318Z",
+     "iopub.status.idle": "2024-02-29T20:17:50.302953Z",
+     "shell.execute_reply": "2024-02-29T20:17:50.302103Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:50.249072Z"
     }
    },
    "outputs": [],
@@ -549,15 +540,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 17,
    "id": "ec57a330-80ee-442f-8a83-a943e6f0b685",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T21:38:09.490619Z",
-     "iopub.status.busy": "2023-12-05T21:38:09.489815Z",
-     "iopub.status.idle": "2023-12-05T21:38:09.579934Z",
-     "shell.execute_reply": "2023-12-05T21:38:09.579015Z",
-     "shell.execute_reply.started": "2023-12-05T21:38:09.490574Z"
+     "iopub.execute_input": "2024-02-29T20:17:50.305225Z",
+     "iopub.status.busy": "2024-02-29T20:17:50.304555Z",
+     "iopub.status.idle": "2024-02-29T20:17:50.426007Z",
+     "shell.execute_reply": "2024-02-29T20:17:50.425110Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:50.305194Z"
     }
    },
    "outputs": [],
@@ -593,15 +584,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 18,
    "id": "78001c46-8d0f-4836-86c1-3d1d74e22da3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T21:38:09.901069Z",
-     "iopub.status.busy": "2023-12-05T21:38:09.900256Z",
-     "iopub.status.idle": "2023-12-05T21:38:09.945871Z",
-     "shell.execute_reply": "2023-12-05T21:38:09.944689Z",
-     "shell.execute_reply.started": "2023-12-05T21:38:09.901031Z"
+     "iopub.execute_input": "2024-02-29T20:17:50.427044Z",
+     "iopub.status.busy": "2024-02-29T20:17:50.426817Z",
+     "iopub.status.idle": "2024-02-29T20:17:50.468241Z",
+     "shell.execute_reply": "2024-02-29T20:17:50.467489Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:50.427022Z"
     }
    },
    "outputs": [],
@@ -620,9 +611,7 @@
     "# Since Maggie's paper, though, there have been studies\n",
     "# suggesting that the damage distribution at each depth\n",
     "# follows more of a long upper tailed Beta distribution. \n",
-    "# While we don't have parameters for this, we can at least \n",
-    "# represent a wider upper tail. So, -.3 and +.5 can better\n",
-    "# represent this\n",
+    "# But we don't have parameters for this\n",
     "# A key assumption is that\n",
     "# we can round depths to the nearest value in the\n",
     "# dictionary to estimate their loss. There is no guidance in the\n",
@@ -641,7 +630,7 @@
     "dam_low = np.maximum(0,\n",
     "                     hazus_ddfs['rel_dam'] - .3*hazus_ddfs['rel_dam']).round(2)\n",
     "dam_high = np.minimum(1,\n",
-    "                      hazus_ddfs['rel_dam'] + .5*hazus_ddfs['rel_dam']).round(2)\n",
+    "                      hazus_ddfs['rel_dam'] + .3*hazus_ddfs['rel_dam']).round(2)\n",
     "\n",
     "# Add these columns into our dataframe\n",
     "hazus_ddfs = hazus_ddfs.assign(low=dam_low,\n",
@@ -700,15 +689,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 19,
    "id": "33aca7c2-b81d-48b0-ba0a-a2ba3391c913",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T21:38:10.901964Z",
-     "iopub.status.busy": "2023-12-05T21:38:10.901058Z",
-     "iopub.status.idle": "2023-12-05T21:38:10.931939Z",
-     "shell.execute_reply": "2023-12-05T21:38:10.930785Z",
-     "shell.execute_reply.started": "2023-12-05T21:38:10.901914Z"
+     "iopub.execute_input": "2024-02-29T20:17:52.355505Z",
+     "iopub.status.busy": "2024-02-29T20:17:52.355204Z",
+     "iopub.status.idle": "2024-02-29T20:17:52.377863Z",
+     "shell.execute_reply": "2024-02-29T20:17:52.377195Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:52.355480Z"
     }
    },
    "outputs": [],
@@ -722,15 +711,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 20,
    "id": "f838a2d4-2491-449b-92dc-fc345ceea1d9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T21:38:11.348525Z",
-     "iopub.status.busy": "2023-12-05T21:38:11.347467Z",
-     "iopub.status.idle": "2023-12-05T21:38:11.391690Z",
-     "shell.execute_reply": "2023-12-05T21:38:11.390524Z",
-     "shell.execute_reply.started": "2023-12-05T21:38:11.348480Z"
+     "iopub.execute_input": "2024-02-29T20:17:52.821274Z",
+     "iopub.status.busy": "2024-02-29T20:17:52.820750Z",
+     "iopub.status.idle": "2024-02-29T20:17:52.844277Z",
+     "shell.execute_reply": "2024-02-29T20:17:52.843685Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:52.821246Z"
     }
    },
    "outputs": [],
@@ -757,15 +746,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 21,
    "id": "50cd8f69-6b40-47a5-a9e0-ce956e07f956",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T21:38:11.913270Z",
-     "iopub.status.busy": "2023-12-05T21:38:11.912175Z",
-     "iopub.status.idle": "2023-12-05T21:38:12.013679Z",
-     "shell.execute_reply": "2023-12-05T21:38:12.012834Z",
-     "shell.execute_reply.started": "2023-12-05T21:38:11.913222Z"
+     "iopub.execute_input": "2024-02-29T20:17:53.073857Z",
+     "iopub.status.busy": "2024-02-29T20:17:53.073596Z",
+     "iopub.status.idle": "2024-02-29T20:17:53.120549Z",
+     "shell.execute_reply": "2024-02-29T20:17:53.120107Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:53.073834Z"
     }
    },
    "outputs": [],
@@ -823,15 +812,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 22,
    "id": "7ffbc854-d3f2-4e3d-ae8b-554426645f8d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T21:38:14.041591Z",
-     "iopub.status.busy": "2023-12-05T21:38:14.041245Z",
-     "iopub.status.idle": "2023-12-05T21:38:14.094720Z",
-     "shell.execute_reply": "2023-12-05T21:38:14.094034Z",
-     "shell.execute_reply.started": "2023-12-05T21:38:14.041562Z"
+     "iopub.execute_input": "2024-02-29T20:17:54.122001Z",
+     "iopub.status.busy": "2024-02-29T20:17:54.120942Z",
+     "iopub.status.idle": "2024-02-29T20:17:54.302811Z",
+     "shell.execute_reply": "2024-02-29T20:17:54.302248Z",
+     "shell.execute_reply.started": "2024-02-29T20:17:54.121974Z"
     }
    },
    "outputs": [],
