changing truncated value

--- a/workflow/notebooks/ensemble.ipynb
+++ b/workflow/notebooks/ensemble.ipynb
@@ -2,27 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "id": "2df130da-8ff7-481a-9f41-49220ebbb9de",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T20:18:20.841564Z",
-     "iopub.status.busy": "2024-02-29T20:18:20.840337Z",
-     "iopub.status.idle": "2024-02-29T20:18:20.875924Z",
-     "shell.execute_reply": "2024-02-29T20:18:20.874733Z",
-     "shell.execute_reply.started": "2024-02-29T20:18:20.841511Z"
+     "iopub.execute_input": "2024-03-07T17:18:06.780826Z",
+     "iopub.status.busy": "2024-03-07T17:18:06.780412Z",
+     "iopub.status.idle": "2024-03-07T17:18:06.899800Z",
+     "shell.execute_reply": "2024-03-07T17:18:06.899114Z",
+     "shell.execute_reply.started": "2024-03-07T17:18:06.780797Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -30,15 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "id": "aea6c73e-9b4f-4bf1-a40c-0d4105e9eafb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T20:18:20.879045Z",
-     "iopub.status.busy": "2024-02-29T20:18:20.878087Z",
-     "iopub.status.idle": "2024-02-29T20:18:20.921403Z",
-     "shell.execute_reply": "2024-02-29T20:18:20.920262Z",
-     "shell.execute_reply.started": "2024-02-29T20:18:20.878995Z"
+     "iopub.execute_input": "2024-03-07T17:18:06.935058Z",
+     "iopub.status.busy": "2024-03-07T17:18:06.934725Z",
+     "iopub.status.idle": "2024-03-07T17:18:17.428806Z",
+     "shell.execute_reply": "2024-03-07T17:18:17.427983Z",
+     "shell.execute_reply.started": "2024-03-07T17:18:06.935035Z"
     }
    },
    "outputs": [],
@@ -59,15 +50,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "id": "62a43d5d-4b14-43c7-80ec-eb029a6e5529",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T20:18:20.923319Z",
-     "iopub.status.busy": "2024-02-29T20:18:20.922874Z",
-     "iopub.status.idle": "2024-02-29T20:18:20.961240Z",
-     "shell.execute_reply": "2024-02-29T20:18:20.960139Z",
-     "shell.execute_reply.started": "2024-02-29T20:18:20.923276Z"
+     "iopub.execute_input": "2024-03-07T17:18:17.430698Z",
+     "iopub.status.busy": "2024-03-07T17:18:17.430235Z",
+     "iopub.status.idle": "2024-03-07T17:18:17.450858Z",
+     "shell.execute_reply": "2024-03-07T17:18:17.450218Z",
+     "shell.execute_reply.started": "2024-03-07T17:18:17.430673Z"
     }
    },
    "outputs": [],
@@ -89,15 +80,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "120b6681-df66-4e80-8f4b-d2e7495fe878",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T20:18:20.965091Z",
-     "iopub.status.busy": "2024-02-29T20:18:20.964204Z",
-     "iopub.status.idle": "2024-02-29T20:18:21.000226Z",
-     "shell.execute_reply": "2024-02-29T20:18:20.999096Z",
-     "shell.execute_reply.started": "2024-02-29T20:18:20.965045Z"
+     "iopub.execute_input": "2024-03-07T17:18:17.451880Z",
+     "iopub.status.busy": "2024-03-07T17:18:17.451663Z",
+     "iopub.status.idle": "2024-03-07T17:18:17.486259Z",
+     "shell.execute_reply": "2024-03-07T17:18:17.485601Z",
+     "shell.execute_reply.started": "2024-03-07T17:18:17.451859Z"
     }
    },
    "outputs": [],
@@ -120,15 +111,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "id": "59719ccf-11fb-4507-bc0a-86cf020e58d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T20:18:21.002034Z",
-     "iopub.status.busy": "2024-02-29T20:18:21.001597Z",
-     "iopub.status.idle": "2024-02-29T20:18:21.534803Z",
-     "shell.execute_reply": "2024-02-29T20:18:21.534053Z",
-     "shell.execute_reply.started": "2024-02-29T20:18:21.001991Z"
+     "iopub.execute_input": "2024-03-07T17:18:17.487852Z",
+     "iopub.status.busy": "2024-03-07T17:18:17.487563Z",
+     "iopub.status.idle": "2024-03-07T17:18:19.697404Z",
+     "shell.execute_reply": "2024-03-07T17:18:19.696413Z",
+     "shell.execute_reply.started": "2024-03-07T17:18:17.487829Z"
     }
    },
    "outputs": [],
@@ -145,15 +136,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "5fcd531e-6d19-4f32-908e-04184401466e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T20:18:21.535531Z",
-     "iopub.status.busy": "2024-02-29T20:18:21.535391Z",
-     "iopub.status.idle": "2024-02-29T20:18:21.668860Z",
-     "shell.execute_reply": "2024-02-29T20:18:21.668119Z",
-     "shell.execute_reply.started": "2024-02-29T20:18:21.535518Z"
+     "iopub.execute_input": "2024-03-07T17:49:42.211653Z",
+     "iopub.status.busy": "2024-03-07T17:49:42.211381Z",
+     "iopub.status.idle": "2024-03-07T17:49:42.979076Z",
+     "shell.execute_reply": "2024-03-07T17:49:42.977580Z",
+     "shell.execute_reply.started": "2024-03-07T17:49:42.211630Z"
     }
    },
    "outputs": [],
@@ -189,15 +180,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "id": "e57e6ce7-c2d3-4fa4-9613-a52c31e004a5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T20:18:21.669657Z",
-     "iopub.status.busy": "2024-02-29T20:18:21.669530Z",
-     "iopub.status.idle": "2024-02-29T20:18:21.687333Z",
-     "shell.execute_reply": "2024-02-29T20:18:21.686668Z",
-     "shell.execute_reply.started": "2024-02-29T20:18:21.669645Z"
+     "iopub.execute_input": "2024-03-07T17:49:44.187707Z",
+     "iopub.status.busy": "2024-03-07T17:49:44.187367Z",
+     "iopub.status.idle": "2024-03-07T17:49:44.267510Z",
+     "shell.execute_reply": "2024-03-07T17:49:44.265774Z",
+     "shell.execute_reply.started": "2024-03-07T17:49:44.187676Z"
     }
    },
    "outputs": [],
@@ -268,15 +259,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "id": "ada9027e-c015-4fec-bee8-cb05132e88b4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T20:18:21.687898Z",
-     "iopub.status.busy": "2024-02-29T20:18:21.687785Z",
-     "iopub.status.idle": "2024-02-29T20:18:21.724852Z",
-     "shell.execute_reply": "2024-02-29T20:18:21.724205Z",
-     "shell.execute_reply.started": "2024-02-29T20:18:21.687887Z"
+     "iopub.execute_input": "2024-03-07T17:49:45.544833Z",
+     "iopub.status.busy": "2024-03-07T17:49:45.544308Z",
+     "iopub.status.idle": "2024-03-07T17:49:45.583792Z",
+     "shell.execute_reply": "2024-03-07T17:49:45.582073Z",
+     "shell.execute_reply.started": "2024-03-07T17:49:45.544787Z"
     }
    },
    "outputs": [],
@@ -480,15 +471,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "id": "db2b3e0d-7253-45b0-9eb0-88b5acd96bbf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T20:18:21.853733Z",
-     "iopub.status.busy": "2024-02-29T20:18:21.853255Z",
-     "iopub.status.idle": "2024-02-29T20:18:21.917526Z",
-     "shell.execute_reply": "2024-02-29T20:18:21.916282Z",
-     "shell.execute_reply.started": "2024-02-29T20:18:21.853695Z"
+     "iopub.execute_input": "2024-03-07T17:49:48.531513Z",
+     "iopub.status.busy": "2024-03-07T17:49:48.530990Z",
+     "iopub.status.idle": "2024-03-07T17:49:48.640109Z",
+     "shell.execute_reply": "2024-03-07T17:49:48.638446Z",
+     "shell.execute_reply.started": "2024-03-07T17:49:48.531468Z"
     }
    },
    "outputs": [],
@@ -519,15 +510,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "id": "73c0b6e3-68e3-447d-ba42-a70f1a5a0421",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T20:18:21.919615Z",
-     "iopub.status.busy": "2024-02-29T20:18:21.919079Z",
-     "iopub.status.idle": "2024-02-29T20:18:21.945564Z",
-     "shell.execute_reply": "2024-02-29T20:18:21.944545Z",
-     "shell.execute_reply.started": "2024-02-29T20:18:21.919574Z"
+     "iopub.execute_input": "2024-03-07T17:50:03.433901Z",
+     "iopub.status.busy": "2024-03-07T17:50:03.433712Z",
+     "iopub.status.idle": "2024-03-07T17:50:03.454732Z",
+     "shell.execute_reply": "2024-03-07T17:50:03.453035Z",
+     "shell.execute_reply.started": "2024-03-07T17:50:03.433886Z"
     }
    },
    "outputs": [],
@@ -554,15 +545,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "id": "d28457a0-b693-4514-b38e-e2ee0a9f8742",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T20:18:21.947258Z",
-     "iopub.status.busy": "2024-02-29T20:18:21.946810Z",
-     "iopub.status.idle": "2024-02-29T20:18:28.504612Z",
-     "shell.execute_reply": "2024-02-29T20:18:28.503941Z",
-     "shell.execute_reply.started": "2024-02-29T20:18:21.947224Z"
+     "iopub.execute_input": "2024-03-07T17:49:50.880825Z",
+     "iopub.status.busy": "2024-03-07T17:49:50.880295Z",
+     "iopub.status.idle": "2024-03-07T17:49:56.726917Z",
+     "shell.execute_reply": "2024-03-07T17:49:56.726117Z",
+     "shell.execute_reply.started": "2024-03-07T17:49:50.880782Z"
     }
    },
    "outputs": [
@@ -689,15 +680,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "id": "9da0470a-5553-47bb-97ab-ac937aef3020",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-29T20:18:28.527196Z",
-     "iopub.status.busy": "2024-02-29T20:18:28.526607Z",
-     "iopub.status.idle": "2024-02-29T20:20:05.131455Z",
-     "shell.execute_reply": "2024-02-29T20:20:05.130605Z",
-     "shell.execute_reply.started": "2024-02-29T20:18:28.527167Z"
+     "iopub.execute_input": "2024-03-07T17:50:06.238223Z",
+     "iopub.status.busy": "2024-03-07T17:50:06.237697Z",
+     "iopub.status.idle": "2024-03-07T17:50:58.926241Z",
+     "shell.execute_reply": "2024-03-07T17:50:58.925158Z",
+     "shell.execute_reply.started": "2024-03-07T17:50:06.238175Z"
     }
    },
    "outputs": [
@@ -732,10 +723,13 @@
     "                                                    lower_clip)\n",
     "\n",
     "    return q\n",
-    "# Using 20000 as an artificial, arbitrary lower bound on value\n",
-    "ens_df['val_s'] = truncnorm_rvs_recursive(ens_df['val_struct'],\n",
-    "                                          ens_df['val_struct']*COEF_VARIATION,\n",
-    "                                          20000)\n",
+    "# Using 1 as an artificial, arbitrary lower bound on value\n",
+    "# Very low probability of getting a negative number but we cannot\n",
+    "# allow that because you cannot have negative risk\n",
+    "vals = rng.normal(ens_df['val_struct'],\n",
+    "                  ens_df['val_struct']*COEF_VARIATION)\n",
+    "vals[vals < 1] = 1\n",
+    "ens_df['val_s'] = vals\n",
     "\n",
     "print('Draw values')\n",
     "\n",
